# primitive

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.user.ba02dba  CMakeSettings.json  Makefile  cmake_install.cmake  imgui.ini  notes.txt  primitive  primitive.cbp  primitive.sln  qtcsettings.cmake  test.txt
.cmake/api/v1/reply/: cache-v2-1fa51c0a598ed8771626.json  cache-v2-363ada4c57dedc0fda71.json  cache-v2-668d927937652c001023.json  cache-v2-87bb15c6f3f1bb95181b.json  cache-v2-b1c2e28736daa67d5534.json  cache-v2-dd104260ee6227ea2b89.json  cmakeFiles-v1-09fc0532d00024a931cb.json  cmakeFiles-v1-175a96146f796c266fc5.json  cmakeFiles-v1-20c20b6620b0227d1a07.json  cmakeFiles-v1-a3e9c82e3e9aab55ecfe.json  cmakeFiles-v1-da3d56b42d5c292d2e34.json  codemodel-v2-036bd0421f71af92f33c.json  codemodel-v2-2bc3493d99f2cc4737fd.json  codemodel-v2-812f1d26dc978b63164a.json  codemodel-v2-9c0994256e4402d7fd07.json  codemodel-v2-d4d54bc799011838edec.json  index-2020-07-15T04-06-58-0387.json  index-2020-07-20T22-21-25-0340.json  index-2020-10-01T15-01-23-0413.json  index-2020-11-20T17-53-20-0631.json  index-2020-11-24T20-53-23-0541.json  index-2020-12-09T05-45-48-0845.json  target-primitive-5e0152b69770f3ea74ab.json  target-primitive-65b8fd33e64c187ae11e.json  target-primitive-Debug-bb1e19f52081e205afe0.json  target-primitive-Release-3e862a9325199d461007.json  target-primitive-cad2459b8c878843d3ec.json
CMakeScripts/: ReRunCMake.make
Debug/: imgui.ini  primitive
include/: Camera.hpp  Collider.hpp  Core.hpp  Game.hpp  Input.hpp  Mesh.hpp  Model.hpp  Shader.hpp  Sound.hpp  Texture.hpp  Window.hpp  externalModel.hpp  primitive - Shortcut.lnk
lib/: assimp-vc142-mtd.lib  libassimp.so.REMOVED.git-id
lib/APPLE/: libGLEW.2.1.0.dylib  libGLEW.2.2.0.dylib  libglfw.3.4.dylib
lib/APPLE/GLFW/: libglfw.3.4.dylib
lib/APPLE/x86_64/: libGLEW.2.2.0_x86_64.dylib
lib/WIN32/: assimp-vc142-mt.lib  nfd.lib
lib/fmod/lib/: libfmod.so.11  libfmod.so.11.4  libfmodL.so.11  libfmodL.so.11.4
primitive/: CUBE.mtl  Game.cpp  Game.hpp  imgui.ini  primitive.vcxproj  primitive.vcxproj.filters  test.txt
primitive.build/Debug/ZERO_CHECK.build/: Script-B4A1721BEB17417089125496.sh
primitive.build/Debug/primitive.build/Objects-normal/x86_64/: Camera.d  Camera.dia  Collider.d  Collider.dia  Core.d  Core.dia  Game.d  Game.dia  Input.d  Input.dia  Mesh.d  Mesh.dia  Model.d  Model.dia  Shader.d  Sound.d  Sound.dia  Texture.d  Window.d  externalModel.d  externalModel.dia  imgui.d  imgui_demo.d  imgui_draw.d  imgui_impl_glfw.d  imgui_impl_opengl3.d  imgui_widgets.d  main.d  main.dia  primitive.LinkFileList
primitive.xcodeproj/: project.pbxproj
primitive.xcodeproj/project.xcworkspace/xcuserdata/monter.xcuserdatad/: UserInterfaceState.xcuserstate
primitive.xcodeproj/xcuserdata/monter.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
primitive.xcodeproj/xcuserdata/monter.xcuserdatad/xcschemes/: xcschememanagement.plist
primitive/x64/Debug/: vc142.idb
primitive/x64/Debug/primitive.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  primitive.lastbuildstate
primitive/x64/Release/primitive.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.write.1.tlog  primitive.lastbuildstate  primitive.write.1u.tlog
rec/: basic.frag  basic.vert  cube.fbx
src/: Camera.cpp  Collider.cpp  Core.cpp  Game.cpp  Input.cpp  Mesh.cpp  Model.cpp  Shader.cpp  Sound.cpp  Texture.cpp  Window.cpp  externalModel.cpp  main.cpp
x64/Release/: imgui.ini  primitive.ipdb  test.txt
x64/Release/rec/: basic.frag
